5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4069/executions/1602_2895.log
== TEST (2019-03-20 18:55:16) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados"))
valor = float(input("valor unitario de cada jogo"))
frete = float(input("valor a ser pago no frete"))

print(var+valor+frete)

-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:55:34) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("valor unitario de cada jogo: "))
frete = float(input("valor a ser pago no frete: "))

print(var+valor+frete)

-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:55:40) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("valor unitario de cada jogo: "))
frete = float(input("valor a ser pago no frete: "))

print(var+valor+frete)

-- EXECUTION TIME:
0.18541
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
172.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
1542.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:55:50) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("valor unitario de cada jogo: "))
frete = float(input("valor a ser pago no frete: "))

print(var+valor+frete)

-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:55:54) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("valor unitario de cada jogo: "))
frete = float(input("valor a ser pago no frete: "))

print(var+valor+frete)

-- OUTPUT:
135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:56:35) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("valor unitario de cada jogo: "))
frete = float(input("valor a ser pago no frete: "))

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:56:40) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("valor unitario de cada jogo: "))
frete = float(input("valor a ser pago no frete: "))

print(total)

-- EXECUTION TIME:
0.126184
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 5, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:57:47) 
-- CODE:
var = float(input("2"))
valor = float(input("50"))
frete = float(input("45"))

print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:58:12) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("50"))
frete = float(input("45"))

print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:59:08) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("50"))
frete = float(input("45"))
total = float(input("var+valor+frete"))
print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:59:14) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("50"))
frete = float(input("45"))
total = float(input("var+valor+frete"))
print(total)


-- EXECUTION TIME:
0.127013
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    total = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:59:33) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("50"))
frete = float(input("45"))
print = float(input("var+valor+frete"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:59:37) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("50"))
frete = float(input("45"))
print = float(input("var+valor+frete"))



-- EXECUTION TIME:
0.123764
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    print = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:00:12) 
-- CODE:
var = (input("quantidade de jogos a serem encomendados: "))
valor = (input("50"))
frete = (input("45"))
print = float(input("var+valor+frete"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:00:15) 
-- CODE:
var = (input("quantidade de jogos a serem encomendados: "))
valor = (input("50"))
frete = (input("45"))
print = float(input("var+valor+frete"))



-- EXECUTION TIME:
0.135706
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    print = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:02:24) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float((input("valor de cada jogo: "))
frete = float(input("valor do frete: "))
print(total)




-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:04) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float((input("valor de cada jogo: "))
frete = float(input("valor do frete"))
print(total)




-- ERROR:
File "XXXX", line 3
    frete = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:33) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("valor de cada jogo: "))
frete = float((input("valor do frete"))
print(total)




-- ERROR:
File "XXXX", line 4
    print(total)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:03:47) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("valor de cada jogo: "))
frete = float(input("valor do frete"))
print(total)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:03:51) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("valor de cada jogo: "))
frete = float(input("valor do frete"))
print(total)




-- EXECUTION TIME:
0.156916
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:03:53) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("valor de cada jogo: "))
frete = float(input("valor do frete"))
print(total)




-- EXECUTION TIME:
0.165502
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:31) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("qual o valor de cada jogo: "))
frete = float(input("qual o valor do frete"))
print(total)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:05:00) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("qual o valor de cada jogo: "))
frete = float(input("qual o valor do frete"))
print(total)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:05:59) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("qual o valor de cada jogo: "))
frete = float(input("qual o valor do frete"))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:06:32) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("qual o valor de cada jogo: "))
frete = float(input("qual o valor do frete"))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:06:48) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("qual o valor de cada jogo: "))
frete = float(input("qual o valor do frete: "))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:07:43) 
-- CODE:
var = float(input("quantidade de jogos a serem encomendados: "))
valor = float(input("qual o valor de cada jogo: "))
frete = float(input("qual o valor do frete: "))
total = var*valor+frete

print(total)



-- EXECUTION TIME:
0.207714
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
